--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-time-machine
 title: Murder Hotel
-description: Murder Hotel
+description: A VR puzzle-horror game set in H.H. Holmes' famous murder hotel where the player needs to escape by solving puzzles with a mystical oil lamp that reveals hidden elements in each level.
