Changed share message
Signed-off-by: Chris Luntraru <chris.luntraru@gmail.com>

--- a/_data/informations.yml
+++ b/_data/informations.yml
@@ -76,7 +76,7 @@ website:
         description: |
           
       share:
-        title: "Share this post"
+        title: "Share this milestone"
       comments:
         title: "Leave a comment on this post"
 
