--- a/_data/options.yml
+++ b/_data/options.yml
@@ -8,7 +8,7 @@ blog:
   enable: true
 google:
   analytics:
-    enable: true
+    enable: false
 global:
   links:
     underline: true
@@ -42,7 +42,7 @@ sidebar:
   icons:
     enable: true
   socials:
-    enable: true
+    enable: false
 content:
   icons:
     enable: true
